# AI_Project_Template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  labeler.yml  release.yml  secret-scan.yml  stale.yml
notebooks/: 01_example_workflow.ipynb
src/: __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
src/agents/: __init__.py  base.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  logging.py
src/evals/: __init__.py
src/evals/datasets/: golden.jsonl
src/evals/judges/: exact_match.py
src/evals/offline/: run_eval.py
src/guardrails/: __init__.py  filters.py
src/ml/: __init__.py  predict.py  train.py
src/modeling/: __init__.py  train.py
src/observability/: __init__.py  cost.py  feedback.py  tracing.py
src/prompts/: __init__.py  registry.py
src/prompts/templates/: system.v1.md
src/rag/: __init__.py  chunking.py  indexing.py  retrieval.py
src/services/: __init__.py
src/tools/: __init__.py  web_search.py
src/workflows/: __init__.py  chains.py
tests/: conftest.py  test_dataset.py
tests/unit/: test_config.py  test_dataset.py  test_guardrails.py
